# convert-video

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.minimal  PROGRESS.md  README.md  change-title.sh  clutch.service  convert-video.py  convert-video.service  convert-video.sh  convert_subtitles_to_srt.sh  dev.sh  docker-compose.yml  docker-entrypoint.sh  docker-release.sh  extract-audio.sh  install.ps1  install.sh  pyproject.toml  qbt-hardlink-to-watch.sh  rdt-move-to-watch.sh
.github/workflows/: docker-publish.yml
docs/wiki/: CLI-Options-Reference.md  Docker.md  Home.md  Remote-Upload-and-Stream-Mode.md  Scheduling-and-Energy-Rules.md  Service-and-API.md
src/clutch/: CHANGELOG.md  __init__.py  auth.py  cli.py  converter.py  http_handler.py  iso.py  logs.py  mediainfo.py  notifications.py  output.py  presets.py  remote.py  service.py  store.py  updater.py  watcher.py
src/clutch/web/: dashboard.css  dashboard.html  dashboard.js  i18n.js  login.html  setup.html
src/clutch/web/lang/: en.json  es.json
src/convert_video/: __init__.py  cli.py  converter.py  iso.py  mediainfo.py  output.py  scheduler.py  service.py  updater.py
src/convert_video/web/: dashboard.css  dashboard.html  dashboard.js
tests/: test_conversion_detection.py  test_log_filtering.py
