[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clutch"
version = "1.7.3"
description = "Clutch transcodes video files through HandBrakeCLI with smart codec detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "tqdm",
]

[project.scripts]
clutch = "clutch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clutch.web" = ["*.html", "*.css", "*.js", "*.png", "*.ico"]
