[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clutch"
version = "2.0.0"
description = "Clutch transcodes video files through HandBrakeCLI with smart codec detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "tqdm",
]

[project.scripts]
clutch = "clutch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clutch" = ["CHANGELOG.md"]
"clutch.web" = ["*.html", "*.css", "*.js", "*.png", "*.ico", "lang/*.json"]
